assets/styles/timeline.css
.events {
  position: relative;
  display: flex;
  flex-direction: column;
  row-gap: 1.5rem;
}

.events::before {
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  height: 100%;
  width: 2px;
  background: var(--color-kyudo-gm-light-grey);
  transform: translateX(-50%);
}

.event {
  display: flex;
  align-items: flex-start;
}

.event .marker {
  order: 1;
  flex-shrink: 0;
  position: relative;
  margin-top: 1rem;
}

.event .content {
  width: 50%;
}

.event:nth-child(odd) .content {
  text-align: right;
  padding-right: 1.5rem;
}

.event:nth-child(odd) .marker {
  left: -7px;
}

.event:nth-child(even) {
  flex-direction: row-reverse;
}

.event:nth-child(even) .content {
  text-align: left;
  padding-left: 1.5rem;
}

.event:nth-child(even) .marker {
  left: 7px;
}

